--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,6 +9,8 @@ include_filter=""
 exclude_filter=""
 export_path="C:/MShogi/ModernShogi.exe"
 patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
 
 [preset.0.options]
 
