--- a/ModernShogi.csproj
+++ b/ModernShogi.csproj
@@ -38,15 +38,15 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GodotSharp, Version=1.0.6948.24971, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="GodotSharp, Version=1.0.6949.19682, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Users\chaos\AppData\Roaming\Godot\mono\solutions\10460354967624842995_5_1546442693\GodotSharp\bin\Release\GodotSharp.dll</HintPath>
+      <HintPath>..\..\Users\chaos\AppData\Roaming\Godot\mono\solutions\4760267815245497075_5_1546442693\GodotSharp\bin\Release\GodotSharp.dll</HintPath>
     </Reference>
     <Reference Include="LiteNetLib">
       <HintPath>Libs\LiteNetLib.dll</HintPath>
     </Reference>
     <Reference Include="ShogiNet">
-      <HintPath>Libs\ShogiNet.dll</HintPath>
+      <HintPath>ShogiNet\bin\Release\ShogiNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net" />
