--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -20,9 +20,9 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-custom_template/release="C:/GIT/godot/bin/godot.windows.opt.64.mono.exe"
-custom_template/debug="C:/GIT/godot/bin/godot.windows.debug.64.mono.exe"
-application/icon="D:/GIT/ModernShogi/ModernShogi/shogi.ico"
+custom_template/release=""
+custom_template/debug=""
+application/icon="C:/GIT/ModernShogi/shogi.ico"
 application/file_version=""
 application/product_version="1.3.0.0"
 application/company_name="Yuri Roubinski"
