--- a/ModernShogi.csproj
+++ b/ModernShogi.csproj
@@ -44,16 +44,17 @@
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GodotSharp">
-      <HintPath>.mono\assemblies\GodotSharp.dll</HintPath>
+    <Reference Include="GodotSharp" />
+    <Reference Include="GodotSharp, Version=1.0.7217.28399, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Godot\GodotSharp\Api\Release\GodotSharp.dll</HintPath>
     </Reference>
-    <Reference Include="GodotSharpEditor">
-      <HintPath>.mono\assemblies\GodotSharpEditor.dll</HintPath>
-    </Reference>
+    <Reference Include="GodotSharpEditor" Condition=" '$(Configuration)' == 'Tools' " />
     <Reference Include="LiteNetLib">
-      <HintPath>.mono\assemblies\LiteNetLib.dll</HintPath>
+      <HintPath>..\LiteNetLib\LiteNetLib.dll</HintPath>
     </Reference>
-    <Reference Include="ShogiNet">
+    <Reference Include="ShogiNet, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>ShogiNet\bin\Release\ShogiNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
