--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../ModernShogiBin/ModernShogi.exe"
+export_path="C:/MShogi/ModernShogi.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,11 +32,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon="C:/GIT/ModernShogi/shogi.ico"
+application/icon="res://shogi.ico"
 application/file_version=""
 application/product_version="1.3.0.0"
-application/company_name="Yuri Roubinski"
+application/company_name="Yuri Roubinsky"
 application/product_name="Modern Shogi"
 application/file_description=""
-application/copyright="Yuri Roubinski aka Chaosus"
+application/copyright="Yuri Roubinsky aka Chaosus"
 application/trademarks=""
